external-crates/move/crates/move-compiler/tests/move_2024/expansion/friend_decl_inner_scope_alias_invalid.move
address 0x42 {
module Q {
    public fun q() {}
}

module R {
    friend Q;

    public(friend) fun r() {
        use 0x42::Q;
        Q::q()
    }
}
}
